# tomojepa

./: .dockerignore  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json.example
.github/workflows/: ci.yml
configs/bandedvit/: petiole_sigreg_224.yaml  petiole_sigreg_448.yaml  petiole_sigreg_448_v5.yaml  petiole_sigreg_448_v6.yaml  petiole_simmim_224.yaml  petiole_simmim_448_v10.yaml  petiole_simmim_448_v11.yaml  petiole_simmim_448_v12.yaml  petiole_simmim_448_v7.yaml  petiole_simmim_448_v8.yaml  petiole_simmim_448_v9.yaml  petiole_simmim_896_v13.yaml  petiole_simmim_896_v14.yaml  petiole_simmim_896_v15.yaml  petiole_simmim_896_v16.yaml  petiole_simmim_896_v17.yaml
configs/swinjepa/schedules/: isolate_c4_mae_only.yaml  isolate_c4_sigreg.yaml  isolate_c4_sigreg_b1.yaml  isolate_c4_sigreg_c4.yaml  isolate_c4_sigreg_e4_cos_gate.yaml  isolate_c4_sigreg_e4_warmup.yaml  petiole_448_coarse_first.yaml  petiole_448_coarse_first_no_freeze.yaml  petiole_integrated_224.yaml  petiole_integrated_448.yaml  petiole_integrated_full_224.yaml  petiole_simmim_full_224.yaml  petiole_simmim_s4_224.yaml  petiole_simmim_s4_448.yaml  petiole_simmim_sameaug_224.yaml  petiole_simmim_sameaug_nofg_norot_224.yaml
configs/swinjepa/sweeps/c4_random/: base.yaml  generate.py  manifest.yaml  run_sweep.py
configs/swinjepa_v2/: default_224.yaml  petiole_448_full.yaml  petiole_448_full_stopgrad.yaml
constraints/: cpu.txt  cuda-x86.txt  spark-cu128.txt
docker/: Dockerfile  README.md  docker-compose.yml
docs/: FAQ.md  NEXT_MODEL_DESIGN.md  RUN_LOCAL.md
src/tomojepa/: __init__.py  cli.py
src/tomojepa/bandedvit/: __init__.py  bvit.py  config.py  mask.py  model.py  pca_viz.py  sigreg.py  train.py
src/tomojepa/bandedvit/scripts/: __init__.py  overfit_one_batch.py
src/tomojepa/bandedvit/tests/: __init__.py  test_band_sampling.py  test_model.py
src/tomojepa/core/: __init__.py  aug_config.py  augmentations.py  dataset.py  dist.py  model.py  schedule_interp.py  tiling.py
src/tomojepa/patchdb/: README.md  __init__.py  builder.py  cli.py  encoder.py  engine.py  index.py  mcp_server.py  pool.py  schema.sql  service.py  store.py  viz.py
src/tomojepa/ssl/: __init__.py  train.py  validate.py
src/tomojepa/swinjepa/: __init__.py  backbone.py  config.py  infer_tiled.py  losses.py  mask.py  model.py  predictor.py  pyramid.py  pyramid_fusion.py  rope_attn.py  schedule.py  sigreg.py  simmim_config.py  simmim_model.py  train.py  train_simmim.py  validate.py
src/tomojepa/swinjepa/tests/: conftest.py  test_aug_config.py  test_backbone_mask.py  test_freeze_schedule.py  test_losses.py  test_model.py  test_pyramid.py  test_pyramid_fusion.py  test_schedule.py  test_sigreg.py  test_simmim_model.py  test_sweep_job_yaml.py
src/tomojepa/swinjepa_v2/: __init__.py  config.py  nd.py
src/tomojepa/swinjepa_v2/eval/: dense.py  probe.py
src/tomojepa/swinjepa_v2/losses/: __init__.py  prediction.py  sigreg.py  total.py
src/tomojepa/vitup/: __init__.py  attention.py  backbone_adapter.py  block.py  config.py  decoder.py  distill.py  featx.py  infer.py  lora.py  losses.py  model.py  query_embedding.py  rope2d.py  train.py
src/tomojepa/viz/: __init__.py  analyze_shapes.py  build_comparison.py  build_token_db.py  cascade_rgb.py  probe_shapes.py  query_patches.py  zscore_explorer.py
(+127 files in other folders)
